-additional text and description

--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -68,10 +68,11 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-8 col-lg-offset-2 bg-warning"
+			<div class="col-lg-11 col-lg-offset-1"
 				style="padding: 20px 20px;">
-				<p>This view allows a selection of every decision of CloudDSF+
-					and shows the relations between outcomes. Occuring conflicts
+				<h4>CloudDSF+ Visualization</h4>
+				<p>This visualization allows a selection of the outcomes of CloudDSF+
+					and shows the relations between them. Occuring conflicts
 					through the user's choices will be highlighted and warnings might
 					be raised. The visualization of additional relations that do not
 					directly influence possible selections can be toggled with the
@@ -79,7 +80,7 @@
 			</div>
 		</div>
 		<div class="row" id="toolbarDynamic" style="margin-top: 20px">
-			<div class="col-lg-5">
+			<div class="col-lg-5 col-lg-offset-1">
 				<div class="btn-group  btn-group-sm" role="group">
 					<button id="resetAll" class="btn btn-primary " role="button">
 						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
@@ -92,7 +93,7 @@
 						Selection <input id="loadSelection" type="file"></input> </a>
 				</div>
 			</div>
-			<div class="col-lg-7 text-right">
+			<div class="col-lg-6">
 				<div class="btn-group" role="group">
 					<span><strong>Additional Relationships: </strong></span> <input
 						type="checkbox" name="toggleBinding" checked></input> <input
