--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -82,7 +82,15 @@
 	<div class="container vspace">
 
 		<div class="row" id="toolbarTree">
-			<div class="col-lg-12 text-center">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2" style="padding: 10px 10px;">
+					<h4>Hierarchical Layout</h4>
+					<p>The hierarchical layot shows the structure of CloudDSF+ with
+						Decision Points, Decisions and Outcomes. For easier navigation all
+						elements can be toggled at once with the respective controls.</p>
+				</div>
+			</div>
+			<div class="col-lg-8 col-lg-offset-2">
 				<div class="btn-group-sm">
 					<button id="showDps" class="btn btn-primary" role="button">Show
 						All Decision Points</button>
@@ -95,7 +103,17 @@
 		</div>
 
 		<div class="row hidden" id="toolbarDecisions">
-			<div class="col-lg-12 text-center">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 vspace"
+					style="padding: 10px 10px;">
+					<h4>Decision Relations Layout</h4>
+					<p>The visualization show all decision of CloudDSF+ clustered
+						by their respective decision point. All identified relationship
+						types can be toggled through the respective controls. Clicking on
+						a decision will highlight its outgoing decisions.</p>
+				</div>
+			</div>
+			<div class="col-lg-8 col-lg-offset-2 vspace">
 				<div class="btn-group" role="group">
 					<span><strong>Toggle Relationships: </strong></span> <input
 						type="checkbox" name="toggleAll" checked></input> <input
@@ -110,7 +128,16 @@
 		</div>
 
 		<div class="row hidden" id="toolbarOutcomes">
-			<div class="btn-group  btn-group-sm vspace" role="group">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2 vspace"
+					style="padding: 10px 10px;">
+					<h4>Outcome Relations Layout</h4>
+					<p>This visualization shows all outcomes of CloudDSF+. Clicking
+						on an outcome will highlight the outgoing relations depending on
+						the selection of relationship types</p>
+				</div>
+			</div>
+			<div class="btn-group  btn-group-sm vspace col-lg-offset-2" role="group">
 				<button id="showAll" class="btn btn-primary" role="button">Show
 					All Relations</button>
 				<button id="hideAll" class="btn btn-primary" role="button">Hide
@@ -121,12 +148,11 @@
 					Layout</button>
 			</div>
 
-
-			<div class="btn-group" role="group">
-				<span><strong>Toggle Relationships: </strong></span> <input type="checkbox"
-					name="outcomeToggleAll" checked></input> <input type="checkbox"
-					class="out-state-switch" name="outBinding" checked></input> <input
-					type="checkbox" class="out-state-switch" name="outAffecting"
+			<div class="btn-group vspace col-lg-offset-2" role="group">
+				<span><strong>Toggle Relationships: </strong></span> <input
+					type="checkbox" name="outcomeToggleAll" checked></input> <input
+					type="checkbox" class="out-state-switch" name="outBinding" checked></input>
+				<input type="checkbox" class="out-state-switch" name="outAffecting"
 					checked></input> <input type="checkbox" class="out-state-switch"
 					name="outIncluding" checked></input> <input type="checkbox"
 					class="out-state-switch" name="outExcluding" checked></input> <input
