-changed navigation (header, content) -pretty print

--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CloudDSF+ Prototype</title>
+<title>CloudDSF+ KB Navigator</title>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -54,10 +54,10 @@
 				<ul class="nav navbar-nav nav-justified">
 					<li><a href="./index.html"><span><strong>
 									CloudDSF+</strong></span></a></li>
-					<li class="active"><a href="./cloudDSFPrototype.html"><span>Prototype</span>
-					</a></li>
-					<li><a href="./knowledgeBase.html"><span>Knowledge
-								Base</span> </a></li>
+					<li class="active"><a href="./cloudDSFPrototype.html"><span>KB
+								Navigator</span> </a></li>
+					<li><a href="./knowledgeBase.html"><span>KB
+								Visualizer</span> </a></li>
 					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
 								Visualizations</span> </a></li>
 					<li><a href="./about.html"><span>About</span> </a></li>
@@ -68,11 +68,10 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-11 col-lg-offset-1"
-				style="padding: 20px 20px;">
+			<div class="col-lg-11 col-lg-offset-1" style="padding: 20px 20px;">
 				<h4>CloudDSF+ Visualization</h4>
-				<p>This visualization allows a selection of the outcomes of CloudDSF+
-					and shows the relations between them. Occuring conflicts
+				<p>This visualization allows a selection of the outcomes of
+					CloudDSF+ and shows the relations between them. Occuring conflicts
 					through the user's choices will be highlighted and warnings might
 					be raised. The visualization of additional relations that do not
 					directly influence possible selections can be toggled with the
