--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CloudDSF+ Knowledge Base</title>
+<title>CloudDSF+ KB Visualizer</title>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -49,14 +49,13 @@
 				<ul class="nav navbar-nav nav-justified">
 					<li><a href="./index.html"><span><strong>
 									CloudDSF+</strong></span></a></li>
-					<li><a href="./cloudDSFPrototype.html"><span>Prototype</span>
-					</a></li>
-					<li class="active"><a href="./knowledgeBase.html"><span>Knowledge
-								Base</span> </a></li>
+					<li><a href="./cloudDSFPrototype.html"><span>KB
+								Navigator</span> </a></li>
+					<li class="active"><a href="./knowledgeBase.html"><span>KB
+								Visualizer</span> </a></li>
 					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
 								Visualizations</span> </a></li>
-					<li><a href="./about.html"> <span>About</span>
-					</a></li>
+					<li><a href="./about.html"><span>About</span> </a></li>
 				</ul>
 			</nav>
 		</div>
@@ -137,7 +136,8 @@
 						the selection of relationship types</p>
 				</div>
 			</div>
-			<div class="btn-group  btn-group-sm vspace col-lg-offset-2" role="group">
+			<div class="btn-group  btn-group-sm vspace col-lg-offset-2"
+				role="group">
 				<button id="showAll" class="btn btn-primary" role="button">Show
 					All Relations</button>
 				<button id="hideAll" class="btn btn-primary" role="button">Hide
