--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -1,25 +1,10 @@
-<!--
-Copyright 2014 Alexander Darsow
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-http://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>The CloudDSF Visualizations</title>
+<title>CloudDSF Visualizations</title>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -40,6 +25,7 @@ limitations under the License.
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
 <script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
 
+<!-- Start layouts, not possible to substitute without refactoring -->
 <script type="text/javascript">
 	$(function() {
 		initializationOfPage();
@@ -64,24 +50,15 @@ limitations under the License.
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
-					<li><a href="./index.html"> <!-- <span
-							class="glyphicon glyphicon-home"></span>  --> <span><strong>
+					<li><a href="./index.html"><span><strong>
 									CloudDSF+</strong></span></a></li>
-					<li><a href="./cloudDSFPrototype.html"> <!-- <span
-							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
-					</a></li>
-					<li><a href="./knowledgeBase.html"> <!--  <span
-							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
-								Base</span>
-					</a></li>
-					<li class="active"><a href="./cloudDSFVisualizations.html">
-							<!--  <span
-							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
-								Visualizations</span>
-					</a></li>
-					<li><a href="./about.html"> <!-- <span
-							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
-					</a></li>
+					<li><a href="./cloudDSFPrototype.html"><span>KB
+								Navigator</span> </a></li>
+					<li><a href="./knowledgeBase.html"><span>KB
+								Visualizer</span> </a></li>
+					<li class="active"><a href="./cloudDSFVisualizations.html"><span>CloudDSF
+								Visualizations</span> </a></li>
+					<li><a href="./about.html"><span>About</span> </a></li>
 				</ul>
 			</nav>
 		</div>
