--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,11 +19,9 @@
 
 <!-- Custom Style Sheets -->
 
-
 <!-- JavaScript Libraries -->
 <script src="./js/lib/jquery-1.11.1.min.js" type="text/javascript"></script>
 <script src="./js/lib/bootstrap.min.js" type="text/javascript"></script>
-<script src="./js/lib/d3.4.13.min.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -44,23 +42,15 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<nav id="navbar" class="collapse navbar-collapse" role="navigation">
 				<ul class="nav navbar-nav nav-justified">
-					<li class="active"><a href="./index.html"> <!-- <span
-							class="glyphicon glyphicon-home"></span> --> <span><strong>
+					<li class="active"><a href="./index.html"><span><strong>
 									CloudDSF+</strong></span></a></li>
-					<li><a href="./cloudDSFPrototype.html"> <!-- <span
-							class="glyphicon glyphicon-globe"></span> --> <span>Prototype</span>
-					</a></li>
-					<li><a href="./knowledgeBase.html"> <!--  <span
-							class="glyphicon glyphicon-book"> </span>  --> <span>Knowledge
-								Base</span>
-					</a></li>
-					<li><a href="./cloudDSFVisualizations.html"> <!--  <span
-							class="glyphicon glyphicon-picture"></span> --> <span>CloudDSF
-								Visualizations</span>
-					</a></li>
-					<li><a href="./about.html"> <!-- <span
-							class="glyphicon glyphicon-flag"></span> --> <span>About</span>
-					</a></li>
+					<li><a href="./cloudDSFPrototype.html"><span>KB
+								Navigator</span> </a></li>
+					<li><a href="./knowledgeBase.html"><span>KB
+								Visualizer</span> </a></li>
+					<li><a href="./cloudDSFVisualizations.html"><span>CloudDSF
+								Visualizations</span> </a></li>
+					<li><a href="./about.html"><span>About</span> </a></li>
 				</ul>
 			</nav>
 		</div>
