-changed arrow and link layout for decision relations layout -content changes

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -60,15 +60,10 @@
 		<div class="row">
 			<div class="col-md-12">
 				<div class="jumbotron">
-					<h1>The Cloud Decision Support Framework</h1>
-					<p>The Cloud Decision Support Framework (CloudDSF) helps
+					<h1>CloudDSF+</h1>
+					<p>The Cloud Decision Support Framework Plus (CloudDSF+) helps
 						decision makers, who consider the migration of an existing
 						application to the Cloud.</p>
-					<p>
-						<a href="./cloudDSFVisualizations.html"
-							class="btn btn-primary btn-lg" role="button">Prototypical
-							Implementation</a>
-					</p>
 				</div>
 				<div class="col-md-12 text-center">
 					<img src="./img/layout/titleImage.png" alt="CloudDSF Title Image" />
