--- a/WebContent/about.html
+++ b/WebContent/about.html
@@ -61,44 +61,12 @@
 		<div class="row">
 			<div class="col-md-5">
 				<h3>About</h3>
-				<p>
-					This website is part of the Master's Thesis <i>Decision Support
-						for Application Migration to the Cloud</i> at <a
-						href="http://www.iaas.uni-stuttgart.de" target="_blank">IAAS
-						(University Stuttgart)</a> by Alexander Darsow.
-				</p>
-				<p>
-					The CloudDSF is based on <a
-						href="http://www.iaas.uni-stuttgart.de/RUS-data/INPROC-2013-18%20-%20Decision%20Support%20for%20Application%20Migration%20to%20the%20Cloud%20Challenges%20and%20Vision.pdf">an
-						approach of Andrikopoulos et al.</a> considering a vision of a
-					decision support system for Cloud migration. By this, decision
-					makers are supported through focusing on <i>decisions</i> and
-					supporting <i>tasks</i> that are important to be addressed when
-					intending an application migration to the Cloud.
-				</p>
-				<p>The CloudDSF comprises 17 decisions grouped in four main
-					decision points and a total of 10 supporting tasks. The elements
-					constitute a network where decisions are influencing each other and
-					decisions and tasks can affect each other.</p>
-				<p>&nbsp;</p>
-				<p>The Master's Thesis will be published here soon.</p>
 			</div>
-			<div class="col-md-2"></div>
+			
 			<div class="col-md-5">
-				<h3>Site Notice</h3>
 
-				<address>
-					<strong>Alexander Darsow</strong><br /> Schreiberstr. 22<br />
-					D-70199 Stuttgart<br /> <a href="http://www.cloudDSF.com">www.cloudDSF.com</a>
-				</address>
-
-				<p>
-					<span>Tel.: +49 (0) 711 9073983</span><br /> <span>E-Mail:</span>
-					<a href="mailto:contact@clouddsf.com">contact@clouddsf.com</a>
-
-				</p>
 				<h3>Disclaimer</h3>
-				<p>
+<!-- 				<p>
 					<strong>Contents of the website</strong>
 				</p>
 				<p class="small">
@@ -138,7 +106,7 @@
 					respective owner of the copyright or administrator of these rights.
 					If you want to use such content, please let us know and we will
 					establish contact with the respective owner/administrator.</p>
-				<!-- German Impressum -->
+				German Impressum
 				<h3>Impressum</h3>
 				<p>
 					<strong>Inhalt der Webseite</strong>
@@ -188,7 +156,7 @@
 					This disclaimer for websites was written by the law office of Viola
 					Lachenmann, <a class="small"
 						href="http://www.kanzlei-lachenmann.de/" target="_blank">http://www.kanzlei-lachenmann.de/</a>.
-				</p>
+				</p> -->
 			</div>
 		</div>
 	</div>
