-tree layout keeps state within subnav or resizing

--- a/WebContent/cloudDSFVisualizations.html
+++ b/WebContent/cloudDSFVisualizations.html
@@ -88,9 +88,11 @@
 						old <a href="www.clouddsf.com">CloudDSF Prototype</a> with minor
 						adaptations only, hence displaying errors may occur. The
 						underlying data has been updated to the new refined knowledge
-						base. However, all tasks as well as the relations between tasks
-						and decisions have been adopted as-is wihout any review and might
-						not be valid anymore.
+						base. However, All relationship types have been mapped to
+						influencing relations due to the limitations of the layout.
+						Furthermore, all tasks as well as the relations between tasks and
+						decisions have been adopted as-is wihout any review and might not
+						be valid anymore.
 					</strong>
 				</p>
 			</div>
