-update of outcome relations layout to new look (paths, overlay, arrows)

--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -145,7 +145,7 @@
 						All Relations</button>
 					<button id="hideAll" class="btn btn-primary" role="button">Hide
 						All Relations</button>
-					<button id="fixLayout" class="btn btn-primary" role="button">Fixated
+					<button id="fixLayout" class="btn btn-primary" role="button">Fixed
 						Layout</button>
 					<button id="looseLayout" class="btn btn-primary" role="button">Loose
 						Layout</button>
