--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -85,7 +85,7 @@
 						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
 						Reset Selection
 					</button>
-					<a class="btn btn-primary" role="button"><span
+					<a id="store" class="btn btn-primary" role="button"><span
 						class="glyphicon glyphicon-save" aria-hidden="true"></span> Store
 						Selection</a> <a class="btn btn-primary btn-file"><span
 						class="glyphicon glyphicon-open" aria-hidden="true"></span> Load
@@ -122,8 +122,8 @@
 
 	<!-- Include for Visualization -->
 	<script src="js/cdsfPlus-layout.js" type="text/javascript"></script>
-	<script src="js/prototype.js" type="text/javascript"></script>
 	<script src="js/modals.js" type="text/javascript"></script>
+	<script src="js/prototype.js" type="text/javascript"></script>
 	<script src="js/dynamicRelations.js" type="text/javascript"></script>
 </body>
 </html>
