--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -68,18 +68,18 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-11 col-lg-offset-1" style="padding: 20px 20px;">
-				<h4>CloudDSF+ Visualization</h4>
+			<div class="col-lg-12" style="padding: 20px 20px;">
+				<h4>KB Navigator</h4>
 				<p>This visualization allows a selection of the outcomes of
 					CloudDSF+ and shows the relations between them. Occuring conflicts
 					through the user's choices will be highlighted and warnings might
-					be raised. The visualization of additional relations that do not
-					directly influence possible selections can be toggled with the
-					respective controls.</p>
+					be raised. The visualization of additional relationship types that
+					do not directly influence possible selections can be toggled with
+					the respective controls.</p>
 			</div>
 		</div>
 		<div class="row" id="toolbarDynamic" style="margin-top: 20px">
-			<div class="col-lg-5 col-lg-offset-1">
+			<div class="col-lg-5">
 				<div class="btn-group  btn-group-sm" role="group">
 					<button id="resetAll" class="btn btn-primary " role="button">
 						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
@@ -92,9 +92,10 @@
 						Selection <input id="loadSelection" type="file"></input> </a>
 				</div>
 			</div>
-			<div class="col-lg-6">
+			<div class="col-lg-7">
 				<div class="btn-group" role="group">
-					<span><strong>Additional Relationships: </strong></span> <input
+					<span><strong>Relationships: </strong></span> <input
+						type="checkbox" name="toggleLastOutcome" checked></input> <input
 						type="checkbox" name="toggleBinding" checked></input> <input
 						type="checkbox" name="toggleAffecting" checked></input> <input
 						type="checkbox" name="toggleAllowing" checked></input>
