-pretty print with google javascript formatter

--- a/WebContent/knowledgeBase.html
+++ b/WebContent/knowledgeBase.html
@@ -110,7 +110,8 @@
 					<p>The visualization shows all decisions of CloudDSF+ clustered
 						by their respective decision points. All identified relationship
 						types can be toggled through the respective controls. Clicking on
-						a decision will highlight its outgoing relations while fading out everything else.</p>
+						a decision will highlight its outgoing relations while fading out
+						everything else.</p>
 				</div>
 			</div>
 			<div class="row">
