--- a/WebContent/cloudDSFPrototype.html
+++ b/WebContent/cloudDSFPrototype.html
@@ -78,8 +78,8 @@
 					the respective controls.</p>
 			</div>
 		</div>
-		<div class="row" id="toolbarDynamic" style="margin-top: 20px">
-			<div class="col-lg-5">
+		<div class="row vspace" id="toolbarDynamic" style="margin-top: 20px">
+			<div class="col-lg-12">
 				<div class="btn-group  btn-group-sm" role="group">
 					<button id="resetAll" class="btn btn-primary " role="button">
 						<span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
@@ -92,11 +92,17 @@
 						Selection <input id="loadSelection" type="file"></input> </a>
 				</div>
 			</div>
-			<div class="col-lg-7">
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
 				<div class="btn-group" role="group">
-					<span><strong>Relationships: </strong></span> <input
-						type="checkbox" name="toggleLastOutcome" checked></input> <input
-						type="checkbox" name="toggleBinding" checked></input> <input
+					<input type="checkbox" name="toggleLastOutcome" checked></input> <input
+						type="checkbox" name="toggleRequiring" checked></input>
+				</div>
+			</div>
+			<div class="col-lg-6">
+				<div class="btn-group" role="group">
+					<input type="checkbox" name="toggleBinding" checked></input> <input
 						type="checkbox" name="toggleAffecting" checked></input> <input
 						type="checkbox" name="toggleAllowing" checked></input>
 				</div>
